# odes

./: CMakeLists.txt  README.md  odes.pc.in
include/: odes.h
src/: odes.cpp
test/: test.cpp
